[project]
name = "pan-tilt-zoom-slam"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "opencv-python>=4.11.0.86",
    "pyflann>=1.6.14",
    "scipy>=1.16.1",
    "ultralytics>=8.3.186",
]
